shipwright/manifests/java/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: java-app
    app.kubernetes.io/component: java-app
    app.kubernetes.io/instance: java-app
    app.kubernetes.io/name: java-app
    app.kubernetes.io/part-of: java-app
  name: java-app
spec:
  internalTrafficPolicy: Cluster
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: java-app
    deployment: java-app
  sessionAffinity: None
  type: ClusterIP
