shipwright/manifests/java/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: java-app
    app.kubernetes.io/component: java-app
    app.kubernetes.io/instance: java-app
    app.kubernetes.io/name: java-app
    app.kubernetes.io/part-of: java-app
  name: java-app
spec:
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: java-app
    weight: 100
  wildcardPolicy: None
